tests-project/propmt.txt
Call_1:

Let's restart that check. 
// ^^ as not provided name of folder first, it started working in not correct folder
Please, create new project in Lev/CursorExperiments_step1/tests-project.
tests-project folder should be created by you.
This project, on start, should perform investigation of GET https://fakestoreapi.com/products endpoint with test(s). That endpoint should return an array of objects.
What should be checked in test(s):
      1) Response code = 200
      2) Each object should contain attributes:
      2.1 title - not empty string
      2.2 price - not negative number
      2.3 rating.rate - must not exceed 5 (in fact, be in [0, 5] array).
      3) if test is failed, provide a list of objects with defects.

Call_2: 
// as runned npm i and npm test and got error.
I run "npm install", all goes good.
I run "npm test" and got next error:
● Validation Error:

  Option: extensionsToTreatAsEsm: ['.js'] includes '.js' which is always inferred based on type in its nearest package.json.

  Configuration Documentation:
  https://jestjs.io/docs/configuration

Could you please check what the problem is, and, if possible, fix it?

Call_3:
// as got another error
Now I see next error:
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at Module.require (node:internal/modules/cjs/loader:1231:19)
    at require (node:internal/modules/helpers:177:18)
    at requireOrImportModule (/home/user/Lev/CursorExperiments_step1/tests-project/node_modules/jest-util/build/requireOrImportModule.js:44:28)
    at readConfigFileAndSetRootDir (/home/user/Lev/CursorExperiments_step1/tests-project/node_modules/jest-config/build/readConfigFileAndSetRootDir.js:112:66)

****
Then all start working
